<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hello_World - Home Screen</string>
    <string name="activity_title_new_planet">Hello world - Create a Planet</string>
    <string name="activity_title_config_planet">Hello world - Config Planet</string>
    <string name="activity_title_travel_planet">Hello world - Travel to Planet</string>
    <string name="activity_title_attack_planet">Hello world - Attack a Planet</string>
    
    <string name="planet_name_label">Planet Name: </string>
    <string name="planet_mass_label">Planet Mass: </string>
    <string name="planet_gravity_label">Planet Gravity: </string>
    <string name="planet_colonies_label">Planet Colonies: </string>
    <string name="planet_population_label">Planet Population: </string>
    <string name="planet_military_label">Planet Military: </string>
    <string name="planet_bases_label">Planet Bases: </string>
    <string name="planet_forcefield_label">Planet Forcefield: </string>
    
    <string name="menu_add_planet">Add a New Planet</string>
    <string name="menu_config_planet">Config Planet</string>
    <string name="menu_travel_planet">Travel to Planet</string>
    <string name="menu_attack_planet">Attack On Planet</string>
    <string name="menu_home_planet">Show home Planet</string>
    
    <string name="button_name_done_add">All Done!</string>
    <string name="add_planet_caption">Click Planet to Add</string>
    <string name="content_desc_earth">Planet Earth</string> 
    <string name="content_desc_mars">Planet Mars</string>
    <string name="content_desc_venus">Planet Venus</string>
    <string name="content_desc_jupiter">Planet Jupiter</string>
    <string name="content_desc_saturn">Planet Saturn</string>
    <string name="content_desc_neptune">Planet Neptune</string>
    
    <string name="button_name_colonies">Add Colonies</string>
    <string name="button_name_colonists">Add Colonists</string>
    <string name="button_name_bases">Add Bases</string>
    <string name="button_name_military">Add Military</string>
    <string name="button_name_ffon">Forcefield On</string>
    <string name="button_name_ffoff">Forcefield Off</string>
    <string name="button_name_done">Done Configuring</string>
    <string name="button_name_return">Return Home</string>
    
    <string name="content_desc_bomb">Bomb the Planet</string>
    <string name="content_desc_invade">Invade the Planet</string>
    <string name="content_desc_virus">Infect Planet with Virus</string>
    <string name="content_desc_laser">Fire Laser at Planet</string>
    <string name="content_desc_exit">Exit to Home Planet</string>
    
    <string name="attack_planet_caption">Select Attack Type Using Icon</string>
    <string name="attack_planet_bomb">Bomb a planet</string>
    <string name="attack_planet_invade">Invade a Planet</string>
    <string name="attack_planet_infect">Infect a Planet</string>
    <string name="attack_planet_laser">Shoot a Laser</string>
    <string name="attack_planet_exit">Exit Attack mode</string>
    
    
    
    
    
    
    
    
    
    
    
    
    <string name="action_settings">Settings</string>

</resources>
